force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/COMM_SubscriptionConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Subscription Configuration</label>
    <pluralLabel>Subscription Configurations</pluralLabel>
</CustomObject>