force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_DaysbeforeAdminApprovalWarning__c.field-meta.xml
<CustomField>
    <fullName>COMM_DaysbeforeAdminApprovalWarning__c</fullName>
    <label>Days before Admin Approval Warning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>