force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_DaysBeforeArchiveWarning__c.field-meta.xml
<CustomField>
    <fullName>COMM_DaysBeforeArchiveWarning__c</fullName>
    <label>Days before Archive Warning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>