force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_DaysBeforeRenewalNotification__c.field-meta.xml
<CustomField>
    <fullName>COMM_DaysBeforeRenewalNotification__c</fullName>
    <description>Days before subscription end date for renewal email communication.</description>
    <label>Days Before Renewal Notification</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>