force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_DaysToArchive__c.field-meta.xml
<CustomField>
    <fullName>COMM_DaysToArchive__c</fullName>
    <label>Days to Archive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>