force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_ProvisioningRenewalDays__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProvisioningRenewalDays__c</fullName>
    <label>Provisioning Renewal Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>