force-app/main/default/objects/COMM_SubscriptionConfiguration__mdt/fields/COMM_SubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionType__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerce</fullName>
                <default>true</default>
                <label>Commerce</label>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>